force-app/main/default/objects/Room__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <label>Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>