force-app/main/default/objects/Room__c/fields/Tarrif__c.field-meta.xml
<CustomField>
    <fullName>Tarrif__c</fullName>
    <label>Tarrif</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>